--- a/package.json
+++ b/package.json
@@ -7,14 +7,28 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "json-server": "json-server --watch src/db/db.json"
   },
   "dependencies": {
+    "@ant-design/charts": "^2.2.3",
+    "@ant-design/icons": "^5.5.2",
+    "@tanstack/react-query": "^5.62.3",
+    "antd": "^5.22.3",
+    "autoprefixer": "^10.4.20",
+    "axios": "^1.7.9",
+    "dayjs": "^1.11.13",
+    "papaparse": "^5.4.1",
+    "postcss": "^8.4.49",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "tailwindcss": "^3.4.16",
+    "uuid": "^11.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
+    "@types/node": "^22.10.1",
+    "@types/papaparse": "^5.3.15",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.4",
@@ -22,6 +36,7 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
     "globals": "^15.12.0",
+    "json-server": "^1.0.0-beta.3",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.15.0",
     "vite": "^6.0.1"
